# quickmp

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  bench.py  bench_multiprocess.py  bench_sleep.py  bench_sleep_multiprocess.py  bench_sleep_static.py  bench_static.py  pyproject.toml  run_bench.sh  run_bench_multiprocess.sh  run_bench_sleep.sh  run_bench_sleep_multiprocess.sh  run_bench_sleep_static.sh  run_bench_static.sh
docs/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
python/quickmp/: __init__.py
src/: bench.cpp  bindings.cpp  bindings_cpu.cpp  bindings_ve.cpp  quickmp.hpp
src/cpu/: backend.cpp  dot_product.cpp  internal.hpp  stats.cpp  stomp.cpp
src/kernel/: dot_product.vcpp  stats.vcpp  stomp.vcpp
src/ve/: backend.cpp  dot_product.vcpp  internal.hpp  sleep.vcpp  stats.vcpp  stomp.vcpp
tests/: test_quickmp.py
