[project]
name = "quickmp"
dynamic = ["version"]
authors = [
    { name="Keichi Takahashi", email="hello@keichi.dev" }
]
description = "Quickly compute matrix profiles"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "stumpy>=1.13.0"
]

[build-system]
requires = ["scikit-build-core", "nanobind", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/quickmp/_version.py"]

[tool.setuptools_scm]
write_to = "python/quickmp/_version.py"

[tool.cibuildwheel]
build = ["cp*-macosx_arm64", "cp*-manylinux_x86_64"]
test-command = "pytest {project}/tests"
test-requires = ["pytest", "stumpy"]
test-skip = "cp314*"

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_x86_64*"
environment = {RELEASE_FLAGS="-march=x86-64-v3 -ffast-math"}

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64*"
environment = {RELEASE_FLAGS="-mcpu=apple-m1 -ffast-math"}
